bold font-style for matched phrase

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,9 @@ body {
     background-color: #fff;
     color: black;
 }
+.active {
+    background-color: green;
+}
 
 .container {
     width: 100%;
