add media queries

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,8 +1,8 @@
 $propositionListWidth: 350px;
 %mixinRow {
     display: block;
-    width: 100%;
-    padding: 5%;
+    width: 95%;
+    padding: 5px 5%;
     height: auto;
     h2 {
         margin: 8px;
@@ -21,5 +21,6 @@ $propositionListWidth: 350px;
     }
     img {
         margin: 10px 0;
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
     }
 }
