--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,12 +32,11 @@ a {
 .header {
     width: 100%;
     padding: 4%;
-    padding-bottom: 0.5%;
+    padding-bottom: 0;
+    border-bottom: 1px solid #54c7da;
     font-weight: 400;
     background-color: #006064;
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-size: cover;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
     .header__title {
         text-align: center;
         font-size: 3.5rem;
@@ -70,7 +69,7 @@ a {
             display: inline-block;
             height: 100%;
             .navigation__menu__link {
-                padding: 15px 24px;
+                padding: 15px 24px 16px 24px;
                 color: rgba(255,255,255,1);
                 text-decoration: none;
                 font-weight: 400;
