navigate through list with keys

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -142,6 +142,10 @@ a {
         }
     }
 }
+.activeKey {
+    background-color: #409aa7;
+    color: rgba(255,255,255,0.9);
+}
 
 .countryinfo {
     width: 100%;
